swap experience order

--- a/index.html
+++ b/index.html
@@ -810,15 +810,15 @@
                     <p>Besides web sites I am also an active contributor to several internal tools, such as the internal functional test automation platform, build upon Nightwatch.js and Cucumber and the sites configuration console, written in Electron + React + Redux.</p>
                 </li>
                 <li>
-                    <h4 class="slideSubtitle2">Web Marketing Consultant (2008 &gt; 2015)</h4>
+                    <h4 class="slideSubtitle2">Front end Developer Freelance (2011 &gt; 2014)</h4>
+                    <p>As a front end developer I created web sites with a special attention for usability, SEO and performance.</p>
+                    <p>I relayed over the open source CMS Joomla! and Wordpress as a backend, on top of which I developed customized themes and templates.</p>
+                </li>
+                <li>
+                    <h4 class="slideSubtitle2">Web Marketing Consultant (2008 &gt; 2014)</h4>
                     <p><em>Viro Spa, Zola Predosa (Bo)</em></p>
                     <p>For a sector leader I designed and implemented the corporate web marketing strategy. I created, developed and edited for 3 years the corporate blog <a href="http://www.virosecurityclub.com/" target="_blank">www.virosecurityclub.com</a>, with weekly updates in 4 languages, as a powerful tool of content marketing.</p>
                     <p>As the social media manager I run the Facebook, Twitter and Google+ corporate accounts. As the on-line community manager I dealt with communities, such as forums and newsgroups, related to mechanical security topics.</p>
-                </li>
-                <li>
-                    <h4 class="slideSubtitle2">Web Developer Freelance (2011 &gt; 2014)</h4>
-                    <p>As a front end developer I created web sites with a special attention for usability, SEO and performance.</p>
-                    <p>I relayed over the open source CMS Joomla! and Wordpress as a backend, on top of which I developed customized themes and templates.</p>
                 </li>
                 <li>
                     <h4 class="slideSubtitle2">Communication Manager/Web Master (2007 &gt; 2014)</h4>
