--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                 data-src="media/francesco_bedussi.jpg" alt="Francesco Bedussi">
             <ul>
                 <li>
-                    I am a senior front end and JavaScript developer with 7 years experience.
+                    I am a senior front end and JavaScript developer with 8 years experience.
                 </li>
                 <li>
                     I build rich and inclusive web sites and web apps, using the right tool for the job at hand. From plain HTML, pure CSS and
@@ -782,7 +782,7 @@
 
             <h3 class="slideSubtitle">Skills</h3>
             <ul>
-                <li>Front-end development: JavaScript, ES6, Redux.js, React.js, jQuery, HTML5, CSS3, Sass, Bootstrap, Foundation,
+                <li>Front-end development: JavaScript, ES6, Redux.js, React.js, Jest, Elm, jQuery, HTML5, CSS3, Sass, Bootstrap, Foundation,
                     AJAX, SVG, Material UI, indexedDb</li>
                 <li>Back-end development: Node.Js, Electron, Firebase, C#, .NET MVC, PHP</li>
                 <li>Programming paradigms: OOP, functional programming</li>
